# notes

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: bash.yml  rust.yml
scripts/: bash_completion_footer.bash
src/: cli.rs  config.rs  lib.rs  main.rs  manifest.rs
