[package]
name = "notes"
description = "Note-taking tool"
authors = ["Dagan Martinez <DontEmailMeOrMySonEverAgain@example.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
regex = "1.9.5"
walkdir = "2.3.3"

[build-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
